Replace .collect(toList()) by .toList()